# scraping-tool

./: .gitignore  output.csv  pyproject.toml
src/: compare.py  content_elements.py  csv_writer.py  fetcher.py  input_handler.py  parser.py  scraper.py
tests/: test_content_elements.py  test_csv_writer.py  test_fetcher.py  test_input_handler.py  test_scraper.py
