[tool.poetry]
name = "scraping-tool"
version = "0.1.0"
description = "tool to scraping web content with reusable functionality"
authors = ["Anwar Ahmed <nileking2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pandas = "^2.2.2"
requests = "^2.32.3"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "test_*.py"
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]


